--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    
-    - name: Copy folder content recursively to remote
-      uses: garygrossgarten/github-action-scp@release
+      
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
       with:
-        local: .
-        remote: /home/kesylo/app-test
         host: ${{ secrets.HOST }}
-        username: ${{ secrets.SSH_USER }}
-        privateKey: ${{ secrets.SSH_KEY }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        source: "."
+        target: "/home/kesylo/app-test"
+
