--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
       
-    - name: copy file via ssh password
+    - name: copy files to remote server
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
@@ -28,5 +28,11 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         source: "."
         target: "/home/kesylo/app-test"
-        script: touch loic.test
-
+        
+    - name: Run post install commands
+      uses: garygrossgarten/github-action-ssh@release
+      with:
+        command: touch kesy.txt
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
